Set RACK_ENV to none in the docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.1"
 services:
   web:
     environment:
+      RACK_ENV: none
       APP_ENV: production
       REDIS_HOST: redis
       SECRET: /run/secrets/secret
