Add ssh env vars to nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,12 @@ services:
       - "80:80"
     networks:
       - webnet
+    environment:
+      SSL_KEY_PATH: /run/secrets/ssl_key_path
+      SSL_CERT_PATH: /run/secrets/ssl_cert_path
+    secrets:
+      - ssl_key_path
+      - ssl_cert_path
   web:
     environment:
       RACK_ENV: none
@@ -29,4 +35,8 @@ networks:
   webnet:
 secrets:
    secret:
+     external: true
+   ssl_key_path:
+     external: true
+   ssl_cert_path:
      external: true
