--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     volumes:
       - /mnt/volume_ams3_01/nginx.conf:/etc/nginx/nginx.conf
   web:
+    secrets:
+      - password
     environment:
       RACK_ENV: none
       APP_ENV: production
@@ -31,7 +33,7 @@ services:
 networks:
   webnet:
 secrets:
-   secret:
+   password:
      external: true
    site.key:
      external: true
