--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,10 @@ services:
   web:
     secrets:
       - password
+      - auth0_client_secret
     environment:
       PASSWORD_PATH: /run/secrets/password
+      AUTH0_CLIENT_SECRET_PATH: /run/secrets/auth0_client_secret
       RACK_ENV: none
       APP_ENV: production
       REDIS_HOST: redis
@@ -35,6 +37,8 @@ networks:
   webnet:
 secrets:
    password:
+     external: true
+   auth0_client_secret:
      external: true
    site.key:
      external: true
