--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,11 @@ services:
   web:
     secrets:
       - password
+      - session_secret
       - auth0_client_secret
     environment:
       PASSWORD_PATH: /run/secrets/password
+      SESSION_SECRET_PATH: /run/secrets/session_secret
       AUTH0_CLIENT_SECRET_PATH: /run/secrets/auth0_client_secret
       RACK_ENV: none
       APP_ENV: production
@@ -37,6 +39,8 @@ networks:
   webnet:
 secrets:
    password:
+     external: true
+   session_secret:
      external: true
    auth0_client_secret:
      external: true
