Update NGINX conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -42,6 +42,7 @@ http {
 
         location / {
             proxy_pass   http://web:9292;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
