--- a/nginx.conf
+++ b/nginx.conf
@@ -41,6 +41,7 @@ http {
         ssl_prefer_server_ciphers  on;
 
         location / {
+            proxy_set_header Host $host;
             proxy_pass   http://web:9292;
         }
     }
