--- a/nginx.conf
+++ b/nginx.conf
@@ -31,8 +31,8 @@ http {
         listen       443 ssl;
         server_name  learnaword.net;
 
-        ssl_certificate      /run/secrets/site.crt;
-        ssl_certificate_key  /run/secrets/site.key;
+        ssl_certificate      /run/secrets/www_learnaword_net.pem;
+        ssl_certificate_key  /run/secrets/www_learnaword_net.key;
 
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
