--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,13 @@ services:
       - password
       - session_secret
       - auth0_client_secret
+      - appsignal_push_api_key
     environment:
       PASSWORD_PATH: /run/secrets/password
       SESSION_SECRET_PATH: /run/secrets/session_secret
       AUTH0_CLIENT_SECRET_PATH: /run/secrets/auth0_client_secret
+      APPSIGNAL_PUSH_API_KEY: /run/secrets/appsignal_push_api_key
+      APPSIGNAL_APP_NAME: Cards
       RACK_ENV: none
       APP_ENV: production
       REDIS_HOST: redis
@@ -47,4 +50,6 @@ secrets:
    www_learnaword_net.key:
      external: true
    www_learnaword_net.pem:
+     external: true
+   appsignal_push_api_key:
      external: true
